Fixed a bug with adding food using the addFoodDialog. when clicking on the kj/grams column it would use the kj/grams value as the name of the food. This has been fixed so that clicking on this column will use the food name.

--- a/src/portionadder.ui
+++ b/src/portionadder.ui
@@ -57,7 +57,7 @@
       <item>
        <widget class="QLabel" name="statusMessageLabel">
         <property name="text">
-         <string>status message</string>
+         <string>Double click on a food to add it.</string>
         </property>
        </widget>
       </item>
